plugins {
	id 'java'
	id 'groovy'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'io.franzbecker.gradle-lombok' version '5.0.0'
}

group = 'retos'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.apache.commons:commons-lang3:3.13.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.34'
	implementation 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'

	testCompileOnly 'org.projectlombok:lombok:1.18.34'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

	// JUnit 5
	testImplementation platform('org.junit:junit-bom:5.10.0')
	testImplementation 'org.junit.jupiter:junit-jupiter'

	// Spock Framework
	testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
	testImplementation 'org.spockframework:spock-junit4:2.3-groovy-3.0'

	// Groovy
	testImplementation 'org.codehaus.groovy:groovy-all:3.0.18'
}

test {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}

lombok {
	version("1.18.34")
}

compileJava {
	options.compilerArgs += ['--enable-preview']
}
